- fixed overflow question-contact-us

--- a/main.css
+++ b/main.css
@@ -196,10 +196,10 @@ footer a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 300px;
+  min-height: 300px;
   /* height: 500px; */
 
-  /* min-width: 340px; */
+  min-width: 340px;
   /* border-bottom: 1px solid hsl(175, 50%, 74%); */ /* border? */
 }
 
@@ -209,7 +209,7 @@ footer a:hover {
   color: var(--color-white); /* TODO: välj värg */
   text-align: center;
   font-size: 2.5rem;
-  line-height: 1.2rem;
+  /* line-height: normal; */
   margin: 0rem;
 }
 .title-contact-us {
